refacot: Adaptation selon les convention DAO