@@ -1,7 +1,6 @@
 package be.hers.info.ProjetIntegree.DAO;
 
 import be.hers.info.ProjetIntegree.POJO.Address;
-import be.hers.info.ProjetIntegree.POJO.Appointment;
 import be.hers.info.ProjetIntegree.POJO.Beneficiary;
 import be.hers.info.ProjetIntegree.POJO.Interpreter;
 
@@ -17,7 +16,6 @@ import java.util.stream.Collectors;
  * @author Vatafu Jean
  * @reviewer
  */
-
 public class DAOBeneficiary extends DAO<Beneficiary> {
 
     @Override
@@ -26,37 +24,33 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
         PreparedStatement preparedStatement = null;
         ResultSet resultSet =  null;
 
-        String query = "SELECT login, password, firstName, lastName, phoneNumber, " +
-                "emailAddress, hourQuota, educationLevel, communicationLanguage, " +
-                "FKnumInterpreter, FKAddress " +
+        String query = "SELECT numBeneficiary, firstName, lastName, phoneNumber, " +
+                "emailAddress, hourQuota, educationLevel, communicationLanguage, FKnumInterpreter, FKAddress " +
                 "FROM Beneficiary " +
                 "WHERE numBeneficiary = ?";
 
         try {
             preparedStatement = connect.prepareStatement(query);
-
             preparedStatement.setInt(1, objectToSearchInDB);
             resultSet = preparedStatement.executeQuery();
 
             DAOInterpreter interpreterDAO = new DAOInterpreter();
             DAOAddress addressDAO = new DAOAddress();
-            DAOAppointment appointmentDAO = new DAOAppointment();
 
             if(resultSet.next()) {
                 Address address = addressDAO.find(resultSet.getInt("FKAddress"));
                 Interpreter interpreter = interpreterDAO.find(resultSet.getInt("FKnumInterpreter"));
-                List<Appointment> appointmentList = appointmentDAO.findAllByNumBeneficiary(objectToSearchInDB);
 
                 String langStr = resultSet.getString("communicationLanguage");
-                List<String> communicationLanguage = new ArrayList<String>();
+                List<String> languages = new ArrayList<>();
                 if(langStr != null && !langStr.isEmpty()) {
-                    communicationLanguage = Arrays.stream(langStr.split(","))
-                            .toList();
+                    languages = Arrays.stream(langStr.split(",")).collect(Collectors.toList());
                 }
 
-                beneficiary = new Beneficiary(objectToSearchInDB, resultSet.getString("firstName"), resultSet.getString("lastName"),
-                        resultSet.getString("phoneNumber"), resultSet.getInt("hourQuota"), resultSet.getString("emailAddress"),
-                        address, resultSet.getInt("educationLevel"), interpreter, communicationLanguage, appointmentList);
+                beneficiary = new Beneficiary(resultSet.getInt("numBeneficiary"), resultSet.getString("firstName"),
+                        resultSet.getString("lastName"), resultSet.getString("phoneNumber"),
+                        resultSet.getInt("hourQuota"), resultSet.getString("emailAddress"), address,
+                        resultSet.getInt("educationLevel"), interpreter, languages);
             }
 
         } finally {
@@ -67,7 +61,6 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
                     e.printStackTrace();
                 }
             }
-
             if(preparedStatement != null) {
                 try {
                     preparedStatement.close();
@@ -81,13 +74,12 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
 
     @Override
     public List<Beneficiary> findAll() throws SQLException {
-        List<Beneficiary> listBeneficiary = new ArrayList<Beneficiary>();
+        List<Beneficiary> listBeneficiary = new ArrayList<>();
         PreparedStatement prStat = null;
         ResultSet rs = null;
 
-        String query = "SELECT numBeneficiary, login, password, firstName, lastName, phoneNumber, " +
-                "emailAddress, hourQuota, educationLevel, communicationLanguage, " +
-                "FKnumInterpreter, FKAddress " +
+        String query = "SELECT numBeneficiary, firstName, lastName, phoneNumber, " +
+                "emailAddress, hourQuota, educationLevel, communicationLanguage, FKnumInterpreter, FKAddress " +
                 "FROM Beneficiary";
 
         try {
@@ -96,25 +88,21 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
 
             DAOInterpreter interpreterDAO = new DAOInterpreter();
             DAOAddress addressDAO = new DAOAddress();
-            DAOAppointment appointmentDAO = new DAOAppointment();
 
             while(rs.next()) {
+                Address address = addressDAO.find(rs.getInt("FKAddress"));
+                Interpreter interpreter = interpreterDAO.find(rs.getInt("FKnumInterpreter"));
+
                 String langStr = rs.getString("communicationLanguage");
-                List<String> communicationLanguage = new ArrayList<String>();
+                List<String> languages = new ArrayList<>();
                 if(langStr != null && !langStr.isEmpty()) {
-                    communicationLanguage = Arrays.stream(langStr.split(","))
-                                                        .toList();
+                    languages = Arrays.stream(langStr.split(",")).collect(Collectors.toList());
                 }
 
-                Interpreter interpreter = interpreterDAO.find(rs.getInt("FKnumInterpreter"));
-                List<Appointment> appointmentList = appointmentDAO.findAllByNumBeneficiary(rs.getInt("numBeneficiary"));
-                Address address = addressDAO.find(rs.getInt("FKAddress"));
-
-                Beneficiary beneficiary = new Beneficiary(rs.getInt("numBeneficiary"),
-                        rs.getString("firstName"), rs.getString("lastName"),
-                        rs.getString("phoneNumber"), rs.getInt("hourQuota"),
-                        rs.getString("emailAddress"), address,
-                        rs.getInt("educationLevel"), interpreter, communicationLanguage, appointmentList);
+                Beneficiary beneficiary = new Beneficiary(rs.getInt("numBeneficiary"), rs.getString("firstName"),
+                        rs.getString("lastName"), rs.getString("phoneNumber"),
+                        rs.getInt("hourQuota"), rs.getString("emailAddress"), address,
+                        rs.getInt("educationLevel"), interpreter, languages);
 
                 listBeneficiary.add(beneficiary);
             }
@@ -127,7 +115,6 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
                     e.printStackTrace();
                 }
             }
-
             if(prStat != null) {
                 try {
                     prStat.close();
@@ -142,19 +129,22 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
     @Override
     public boolean create(Beneficiary objectToInsertInDB) throws SQLException {
         boolean isCreated = false;
-        String query = "INSERT INTO Beneficiary (numBeneficiary, login, password firstName, " +
+        String query = "INSERT INTO Beneficiary (numBeneficiary, firstName, " +
                 "lastName, phoneNumber, emailAddress, hourQuota, educationLevel, " +
                 "communicationLanguage, FKnumInterpreter, FKAddress) " +
-                "VALUES (?, ?, ?, ? ?, ?, ?, ?, ?, ?, ?, ?)";
+                "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
 
         PreparedStatement prStat = null;
 
         try {
             prStat = connect.prepareStatement(query);
 
-            String communicationLanguage = objectToInsertInDB.getCommunicationLanguage()
-                    .stream()
-                    .collect(Collectors.joining(",", "", ""));
+            String communicationLanguage = "";
+            if (objectToInsertInDB.getCommunicationLanguage() != null) {
+                communicationLanguage = objectToInsertInDB.getCommunicationLanguage()
+                        .stream()
+                        .collect(Collectors.joining(","));
+            }
 
             prStat.setInt(1, objectToInsertInDB.getNumBeneficiary());
             prStat.setString(2, objectToInsertInDB.getName());
@@ -195,9 +185,12 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
         try {
             preparedStatement = connect.prepareStatement(query);
 
-            String communicationLanguage = objectToUpdateInDB.getCommunicationLanguage()
-                    .stream()
-                    .collect(Collectors.joining(",", "", ""));
+            String communicationLanguage = "";
+            if (objectToUpdateInDB.getCommunicationLanguage() != null) {
+                communicationLanguage = objectToUpdateInDB.getCommunicationLanguage()
+                        .stream()
+                        .collect(Collectors.joining(","));
+            }
 
             preparedStatement.setString(1, objectToUpdateInDB.getName());
             preparedStatement.setString(2, objectToUpdateInDB.getSurname());
@@ -230,8 +223,7 @@ public class DAOBeneficiary extends DAO<Beneficiary> {
         boolean isDeleted = false;
         PreparedStatement preparedStatement = null;
 
-        String query = "DELETE FROM Beneficiary " +
-                "WHERE numBeneficiary = ?";
+        String query = "DELETE FROM Beneficiary WHERE numBeneficiary = ?";
 
         try {
             preparedStatement = connect.prepareStatement(query);
